plugins {
    id 'java'
    id "org.sonarqube" version "3.3"
    id 'org.springframework.boot' version "2.5.7"
    id 'io.spring.dependency-management' version "1.0.11.RELEASE"
}


sonarqube {
    properties {
        property "sonar.sourceEncoding", "UTF-8"
        property "sonar.projectKey", "testnorge-statisk-data-forvalter"
        property "sonar.projectName", "testnorge-statisk-data-forvalter"
        property "sonar.organization", "navikt"
        property "sonar.host.url", "https://sonarcloud.io"
        property "sonar.project.monorepo.enabled", true
        property "sonar.login", System.getenv("SONAR_TOKEN")
    }
}

dependencyManagement {
    imports {
        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2020.0.4'
    }
}

bootJar {
    archiveFileName = "app.jar"
}

test {
    useJUnitPlatform()
}

repositories {
    mavenCentral()
    mavenLocal()

    maven {
        url = uri('https://packages.confluent.io/maven/')
    }
}

dependencies {
    implementation 'com.google.guava:guava:31.0.1-jre'

    implementation 'no.nav.testnav.libs:security-core'
    implementation 'no.nav.testnav.libs:servlet-insecure-security'
    implementation 'no.nav.testnav.libs:kafka-config'
    implementation 'no.nav.testnav.libs:kafka-producers'
    implementation 'no.nav.testnav.libs:avro-schema'
    implementation 'no.nav.testnav.libs:data-transfer-objects'
    implementation 'no.nav.testnav.libs:servlet-core'
    implementation 'no.nav.testnav.libs:database'
    implementation 'no.nav.testnav.libs:commands'
    implementation 'no.nav.testnav.libs:csv-converter'

    implementation 'org.springframework.kafka:spring-kafka'
    implementation 'io.confluent:kafka-avro-serializer:7.0.0'

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap' // TODO remove legacy bootstrap config
    implementation 'org.springframework.cloud:spring-cloud-vault-config-databases'
    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
    implementation 'org.springframework.cloud:spring-cloud-starter-vault-config'

    implementation 'org.aspectj:aspectjweaver:1.9.7'
    implementation 'io.micrometer:micrometer-registry-prometheus'
    implementation 'net.logstash.logback:logstash-logback-encoder:7.0.1'
    implementation 'org.postgresql:postgresql'
    implementation 'com.zaxxer:HikariCP'

    implementation 'org.flywaydb:flyway-core'

    implementation 'com.h2database:h2'
    implementation 'org.hibernate.validator:hibernate-validator'
    implementation 'javax.validation:validation-api:2.0.1.Final'

    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
    implementation 'javax.xml.bind:jaxb-api'
    implementation 'org.springdoc:springdoc-openapi-ui:1.6.1'

    implementation 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    testImplementation 'no.nav.testnav.libs:testing'
    testImplementation 'org.springframework.cloud:spring-cloud-contract-wiremock'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

description = 'testnorge-statisk-data-forvalter'
java.sourceCompatibility = JavaVersion.VERSION_17
